...
  /** UI of the Login Page */
  @override
  Widget build(BuildContext context) {
    final language = context.watch<Language>();
    final local = AppLocalizations.of(context)!;
    return Scaffold(
      key: const Key('loginPage'),

        appBar: AppBar(
        elevation: 0,
          backgroundColor: Colors.transparent,
          actions: [
            Center(
...
                    ),
                  ),
                ),

                const SizedBox(height: 24),
                TextButton(
                    key: const Key('goToRegistrationButton'),
                  onPressed: () =>
                      Navigator.pushNamed(context, '/registration'),
                  child: Text(
                    "${local.no_account_label} ${local.signup_label}",
                    style: TextStyle(fontSize: 16, color: Theme.of(context).colorScheme.primary),
                  ),
...
