...
          ),
        ),
      );
    }

    return Scaffold(
      key: const Key('settingPage'),
      appBar: AppBar(
        title: Text(local.settings_page_title),
        centerTitle: true,
      ),

      body: ScrollConfiguration(
...
                  },
                ),
              ),

            const Divider(height: 1),
            ListTile(
              key: const Key('languageSettingsButton'),
              title: Text(local.language_field_label, style: titleStyle),
              subtitle: Text(
                _getLanguageName(languageController.locale.languageCode),
                style: infoStyle,
              ),
              trailing: const Icon(Icons.language, size: 17),
...
      content: Column(
        mainAxisSize: MainAxisSize.min,
        children: [
          _langTile(
            context,
            "🇬🇧",
            "English",
            const Locale('en'),
            const Key('languageOptionEnglish'),
          ),
          _langTile(
            context,
            "🇮🇹",
            "Italiano",
            const Locale('it'),
            const Key('languageOptionItalian'),
          ),
          _langTile(
            context,
            "🇪🇸",
            "Español",
            const Locale('es'),
...
