...
        }

        final following = snapshot.data!.whereType<Users>().toList();

        //final user = snapshot.data!;
        return Scaffold(
            key: const Key('addDiaryPage'),
          appBar: AppBar(title: Text(trekking.name), centerTitle: true),
          body: ScrollConfiguration(
            behavior: ScrollConfiguration.of(
              context,
            ).copyWith(overscroll: false),
            child: SingleChildScrollView(
...
                  // Notes input
                  _section(
                    context,
                    local.notes_trekking_label,
                    Icons.notes,
                    TextField(
                      key: const Key('diaryNotesField'),
                      controller: _notesController,
                        minLines: 1,
                        maxLines: null,
                        keyboardType: TextInputType.multiline,
                        enableSuggestions: true,
                        autocorrect: true,
...
                          child: Text(local.cancel_button_label),
                        ),
                      ),
                      const SizedBox(width: 8),
                      Expanded(
                        child: ElevatedButton(
                          key: const Key('saveDiaryButton'),
                          child: Text(local.save_botton_label),
                          onPressed: () async {
                            Navigator.push(
                              context,
                              MaterialPageRoute(
                                builder: (_) => const LoadingPage(),
...
