...
        }

        // Check if the trekking is saved by the user or not
        final bool isSaved = _isSavedLocal ?? false;

        return Scaffold(
            key: const Key('trekkingDetailsPage'),
          appBar: AppBar(
            title: Text(trekking.name),
            centerTitle: true,
            actions: [
              //add button
              IconButton(
                key: const Key('openAddDiaryButton'),
                icon: Icon(Icons.add),
                onPressed: () {
                  Navigator.push(
                    context,
                    MaterialPageRoute(
                      builder: (context) =>
...
